--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "book-se",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
+
   },
   "repository": {
     "type": "git",
@@ -18,6 +23,9 @@
   "homepage": "https://github.com/JessVarghese/Book-SE#readme",
   "dependencies": {
     "apollo-server-express": "^2.15.0",
-    "graphql": "^15.8.0"
+    "bcrypt": "^5.0.1",
+    "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.3"
   }
 }
