--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongodb": "^4.4.0",
+    "mongoose": "^5.9.10",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
