--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-server-express": "^2.15.0",
     "bcrypt": "^5.0.1",
     "concurrently": "^7.0.0",
+    "express": "^4.17.3",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.0",
